creat logic for counting and make respnse

--- a/src/app/model/model.component.html
+++ b/src/app/model/model.component.html
@@ -2,4 +2,9 @@
     <h2>{{model.name}}</h2>
   <button (click)="makeCalculations(model.CPI,model.AMNS,model.IRW, model.IIP)">Обрахунок</button>
 
+
+  <div *ngFor="let countInfoObj of count">
+    <h2>{{countInfoObj.countObject.name}}</h2>
+    <p>{{countInfoObj.countObject.sum}}</p>
+  </div>
 </section>
