start creating lofc for calcalating

--- a/src/app/dialogWindows/clasificator/clasificator.component.html
+++ b/src/app/dialogWindows/clasificator/clasificator.component.html
@@ -12,12 +12,16 @@
       <input matInput type="text" formControlName="id">
     </mat-form-field>
     <mat-form-field class="example-form-field" appearance="fill">
-      <mat-label>Номер класифікатора</mat-label>
-      <input matInput type="text"  formControlName="number">
+      <mat-label>Область</mat-label>
+      <input matInput type="text" formControlName="nameOfRegion">
+    </mat-form-field>
+    <mat-form-field class="example-form-field" appearance="fill">
+      <mat-label>Рік класифікатора</mat-label>
+      <input matInput type="text"  formControlName="year">
     </mat-form-field>
     <mat-form-field class="example-form-field" appearance="fill">
       <mat-label>Класифікатор</mat-label>
-      <input matInput type="text"  formControlName="count">
+      <input matInput type="text"  formControlName="totalInfoCount">
     </mat-form-field>
     <div class="buttons">
       <a mat-button (click)="cleareForm()" > Очистити форму </a>
