--- a/src/app/models/models.component.html
+++ b/src/app/models/models.component.html
@@ -10,31 +10,19 @@
       </ng-container>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Область</th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="CPI">
-        <th mat-header-cell *matHeaderCellDef> CPI</th>
-        <td mat-cell *matCellDef="let element"> {{element.CPI}} </td>
+      <ng-container matColumnDef="TA">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Таксономічний аналіз значення</th>
+        <td mat-cell *matCellDef="let element"> {{element.TA}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="AMNS">
-        <th mat-header-cell *matHeaderCellDef> AMNS</th>
-        <td mat-cell *matCellDef="let element"> {{element.AMNS}} </td>
-      </ng-container>
-      <ng-container matColumnDef="IRW">
-        <th mat-header-cell *matHeaderCellDef> IRW</th>
-        <td mat-cell *matCellDef="let element"> {{element.IRW}} </td>
-      </ng-container>
-      <ng-container matColumnDef="IIP">
-        <th mat-header-cell *matHeaderCellDef> IIP</th>
-        <td mat-cell *matCellDef="let element"> {{element.IIP}} </td>
-      </ng-container>
       <ng-container matColumnDef="button">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <button mat-button color="primary" (click)="navigateModel(element)">To model</button>
+        <button mat-button color="primary" (click)="navigateModel(element)">До Моделі</button>
       </td>
     </ng-container>
 
