--- a/src/app/model/model.component.html
+++ b/src/app/model/model.component.html
@@ -8,6 +8,7 @@
       <span>{{statistic.year}}</span> - <span>{{statistic.totalInfoCount}}</span>
     </div>
     <h2>Середнє значення: {{middleCountOfClasificator[i]}}</h2>
+    <h3>Обрахунок стимуляторів та дестимуляторів(P0) = {{countInfoObj.thirdStepCalc}}</h3>
   </div>
 </div>
 </section>
