--- a/src/app/model/model.component.html
+++ b/src/app/model/model.component.html
@@ -1,14 +1,24 @@
 <section class="region-info" *ngIf ="model">
     <h2>{{model.name}}</h2>
-
+  <button mat-button (click)="makeCalculations(count)"
+  >Обрахунки</button>
 <div class="region-table-parent">
   <div *ngFor="let countInfoObj of count, let i = index" >
     <h2>{{countInfoObj.name}}</h2>
     <div *ngFor="let statistic of countInfoObj.statistic" class="region-table">
-      <span>{{statistic.year}}</span> - <span>{{statistic.totalInfoCount}}</span>
+      <span>{{statistic.year}}</span> - <span>{{statistic.totalInfoCount }}</span>
     </div>
     <h2>Середнє значення: {{middleCountOfClasificator[i]}}</h2>
     <h3>Обрахунок стимуляторів та дестимуляторів(P0) = {{countInfoObj.thirdStepCalc}}</h3>
   </div>
+  <div class="button-fourth" >
+  </div>
 </div>
+  <div class="calculation-block">
+    <div>С~ {{cTild}}</div>
+    <div>di {{di}}</div>
+    <div>{{yy}}</div>
+    <div>{{iterdFourCount}}</div>
+    <div>K {{k}}</div>
+  </div>
 </section>
