--- a/src/app/model/model.component.scss
+++ b/src/app/model/model.component.scss
@@ -11,3 +11,18 @@
   flex-direction: column;
   border: 1px solid black;
 }
+.button-fourth{
+  border-left: 1px solid black;
+  padding-left: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.calculation-block{
+ border-top: 1px solid black;
+  padding-top: 15px;
+  div {
+    padding-top: 15px;
+  }
+}
