--- a/src/app/model/model.component.scss
+++ b/src/app/model/model.component.scss
@@ -25,6 +25,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  > .two{
+    padding: 20px 0 ;
+  }
 }
 .calculation-block{
  border-top: 1px solid black;
@@ -32,4 +35,6 @@
   div {
     padding-top: 15px;
   }
+
 }
+
