--- a/src/app/model/model.component.scss
+++ b/src/app/model/model.component.scss
@@ -18,7 +18,9 @@
 .paddingTop-20{
   padding: 20px;
 }
+
 .button-fourth{
+  margin-right: 50px;
   border-left: 1px solid black;
   padding-left: 15px;
   display: flex;
