--- a/src/app/model/model.component.html
+++ b/src/app/model/model.component.html
@@ -18,11 +18,11 @@
       <tbody>
       <tr *ngFor="let countObj of count, let i = index ">
         <td>{{countObj.name}}</td>
-        <td *ngFor="let statistic of countObj.statistic, let i = index" >
-            {{statistic.totalInfoCount}}
+        <td *ngFor="let statistic of countObj.statistic, let i = index">
+          {{statistic.totalInfoCount}}
         </td>
-        <td >
-           {{middleCountOfClasificator[i]}}
+        <td>
+          {{middleCountOfClasificator[i]}}
         </td>
         <td>
           <h3>{{countObj.thirdStepCalc}}</h3>
@@ -30,15 +30,15 @@
       </tr>
       </tbody>
     </table>
-<!--    <div *ngFor="let countInfoObj of count, let i = index" class="region-table">-->
-<!--      <h2>{{countInfoObj.name}}</h2>-->
-<!--      <div *ngFor="let statistic of countInfoObj.statistic">-->
-<!--        <span>{{statistic.year}}</span> - <span>{{statistic.totalInfoCount }}</span>-->
-<!--      </div>-->
-<!--    </div>-->
     <div class="button-fourth">
-      <h3>Вектор відстане від еталону</h3>
+      <h3>Вектор відстані від еталону</h3>
 
+    </div>
+    <div>
+      <div>Таксономічний показник K</div>
+      <div>
+        <p *ngFor="let ki of arrOfKi">{{ki.numberOfKi}}</p>
+      </div>
     </div>
   </div>
   <div class="calculation-block">
@@ -46,6 +46,5 @@
     <div>di {{di}}</div>
     <div>{{yy}}</div>
     <div>{{iterdFourCount}}</div>
-    <div>K {{k}}</div>
   </div>
 </section>
